--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.6",
+    "angular-sanitize": "^1.5.6",
     "angular-ui-router": "^0.3.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "highlightjs": "^8.7.0",
+    "marked": "^0.3.5"
   }
 }
