--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "bootstrap": "^3.3.6",
     "highlightjs": "^8.7.0",
     "marked": "^0.3.5"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^4.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3"
   }
 }
