--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^7.0.0",
     "gulp-uglify": "^1.5.3"
   }
 }
